# SkillProof

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: gendoc.md  memo.md  task_log.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
rubrics/: painting.json  tiling.json
shit_test/: eval_test.py  veo_test.py
src/skillproof/: assessor.py  certificate.py  config.py  correction.py  database.py  models.py  prebaked.py  routes.py  scorer.py  upload.py
